mdapi_output/objects/Image_Classification__c.object
<CustomObject>
    <label>Image Classification</label>
    <nameField>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Classifier__c</fullName>
        <label>Classifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
</CustomObject>